/*
 * SonarLint Core - Server API
 * Copyright (C) 2016-2025 SonarSource SA
 * mailto:info AT sonarsource DOT com
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3 of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with this program; if not, write to the Free Software Foundation,
 * Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */
syntax = "proto3";

package sonarqube.ws.settings;

option java_package = "org.sonarsource.sonarlint.core.serverapi.proto.sonarqube.ws";
option java_outer_classname = "Settings";
option optimize_for = SPEED;

// Response of GET api/settings/values
message ValuesWsResponse {
  repeated Setting settings = 1;
}

message Setting {
  string key = 1;
  oneof valueOneOf {
    string value = 2;
    Values values = 3;
    FieldValues fieldValues = 4;
  }
}

message Values {
  repeated string values = 1;
}

message FieldValues {
  repeated Value fieldValues = 1;

  message Value {
    map<string, string> value = 1;
  }
}


